--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,12 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+<ion-content [fullscreen] = "true">
+  <div class="container">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Bem-vindo ao Blog dos Simpsons!</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <p>Aqui você encontrará artigos, curiosidades e notícias sobre a famosa família de Springfield. Explore nossos conteúdos e divirta-se!</p>
+      </ion-card-content>
+    </ion-card>
   </div>
-</ion-content>
+</ion-content> 
