--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,5 @@
-<ion-content [fullscreen] = "true">
+<app-header></app-header>
+<ion-content [fullscreen]="true">
   <div class="container">
     <ion-card>
       <ion-card-header>
@@ -9,4 +10,4 @@
       </ion-card-content>
     </ion-card>
   </div>
-</ion-content> 
+</ion-content>
