--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title [routerLink]="['/home']">Blog Simpsons</ion-title>
+  <ion-toolbar routerLink="/home" class="logo-container">
+    <img src="assets/simpspns-images.png" alt="Blog Simpsons Logo" class="logo-icone" /> 
+    <span class="logo-title-text">Blog Simpsons</span>
   </ion-toolbar>
 </ion-header>
