--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -76,7 +76,6 @@
                 📅 Nascimento: {{ character.birthdate | date: 'dd/MM/yyyy' }}
               </div>
             </div>
-            
             </div>
         </div>
     </ng-container>
@@ -86,7 +85,8 @@
   <ion-toolbar class="footer-toolbar">
     <ion-title class="footer-title">
       Blog Simpsons &copy; 2025 - Desenvolvedores: 
-      Andrezza Coelho dos Santos 01725227,
+      Andrezza Coelho dos Santos - 01725227,
+      Leonardo Amyntas - 01835116,
       Gabriela Caetano Corrêa - 01701267,
       Jeniffer Camila Nascimento Soares - 01726349,
     </ion-title>
