--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -89,6 +89,7 @@
       Andrezza Coelho dos Santos 01725227,
       Gabriela Caetano Corrêa - 01701267,
       Jeniffer Camila Nascimento Soares - 01726349,
+      Júlio César Queiroz de Barros - 01705803
     </ion-title>
   </ion-toolbar>
 </ion-footer>
