--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -80,16 +80,15 @@
         </div>
     </ng-container>
   </div>
+  <div class="footer">
+    <ion-footer>
+      <ion-toolbar class="footer-toolbar">
+        <div class="footer-content">
+          <div class="footer-title">Blog Simpsons - Alquimistas Dev &copy; 2025</div>
+        </div>
+      </ion-toolbar>
+    </ion-footer>
+  </div>
 </ion-content>
-<ion-footer>
-  <ion-toolbar class="footer-toolbar">
-    <ion-title class="footer-title">
-      Blog Simpsons &copy; 2025 - Desenvolvedores: 
-      Andrezza Coelho dos Santos - 01725227,
-      Leonardo Amyntas - 01835116,
-      Gabriela Caetano Corrêa - 01701267,
-      Jeniffer Camila Nascimento Soares - 01726349,
-      Júlio César Queiroz de Barros - 01705803
-    </ion-title>
-  </ion-toolbar>
-</ion-footer>
+
+
