--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
       </figure>
 
       <div class="logo-text-group">
-        <h1 class="logo-title">Blog Simpsons</h1>
+        <h1 class="logo-title" appYellowText>Blog Simpsons</h1>
         <span class="logo-subtitle">Tudo sobre Springfield</span>
       </div>
     </a>
