--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -84,7 +84,7 @@
     <ion-footer>
       <ion-toolbar class="footer-toolbar">
         <div class="footer-content">
-          <div class="footer-title">Blog Simpsons - Alquimistas Dev &copy; 2025</div>
+          <div class="footer-title">{{ 'Blog Simpsons - Alquimistas Dev © 2025' | uppercase }}</div>
         </div>
       </ion-toolbar>
     </ion-footer>
